<resources>
    <string name="app_name">Tourio</string>
    <string name="near_me">Near Me</string>
    <string name="rating">Rating</string>
    <string name="duration">Duration</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_tour">Tourio</string>


    <string name="title_of_tour">Fun Day In Berkeley</string>
    <string name="duration_of_tour">3 Hours</string>
    <string name="created_by_name">Created By: </string>
    <string name="tour_maker_name">June Cong</string>
    <string name="tour_description">Fun Day In Berkeley is a quick
        tour of chill spots that helps you relax.
        Take a yoga class, play in the water,
        and do a lot more!</string>

    <string name="details">Details</string>
    <string name="comments">Reviews</string>
    <string name="title_activity_navigation_bar">Tourio</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="menu">Menu</string>
    <string name="title_activity_my_profile">Tourio</string>
    <string name="title_activity_create_tour">Tourio</string>
    <string name="title_activity_cashout">Tourio</string>
    <string name="title_activity_about">Tourio</string>
    <string name="comment_text">This is a comment and it is really long adnakdfasldkjfa sdfkjsd lkf jasdlkfjsd hakdalkd skdf lsdkfdj sl</string>

    <string-array name="cities_list">
        <item>Berkeley</item>
        <item>Palo Alto</item>
        <item>San Francisco</item>
        <item>New York City</item>
        <item>Chicago</item>
        <item>Los Angeles</item>
    </string-array>
    <string name="title_activity_action_bar">Tourio</string>
    <string name="tourio">Tourio</string>

    <color name="orange">#FF6344</color>
    <color name="white">#FFFFFF</color>
    <color name="Transparent">#00000000</color>
    <color name="Transparent40">#20000000</color>
    <color name="Transparent80">#a0000000</color>
    <color name="lightGrey">#eeeeee</color>

    <string name="tour_in_session">Your tour is in session! You are free to put your phone
        away and look at your watch</string>
</resources>
