<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/hide_this">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/user"
                android:src="@drawable/icon"
                android:gravity="left"
                android:layout_gravity="left"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_of_tour"
                    android:id="@+id/title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:layout_gravity="left"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="15dp"
                        android:text="@string/created_by_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"/>

                    <TextView
                        android:textSize="15dp"
                        android:text="@string/tour_maker_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rating_frame"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="45dp"
                    android:layout_gravity="right"
                    android:gravity="right">

                    <ImageView
                        android:src="@mipmap/clock_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="right"/>

                    <TextView
                        android:text="@string/duration_of_tour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/map"
        class="com.google.android.gms.maps.MapFragment"
        />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="START"
        android:onClick="startGPS"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/darker_gray">
        <Button
            android:id="@+id/stops_button"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="@string/details"
            android:onClick="showStops"
            android:background="@android:color/white"/>

        <Button
            android:id="@+id/comments_button"
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/comments"
            android:onClick="showComments"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/tour_description_layout">

            <TextView
                android:layout_gravity="left"
                android:text="Tour Description:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"/>

            <TextView
                android:id="@+id/tour_description"
                android:text="@string/tour_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"/>

        </LinearLayout>

        <FrameLayout
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/details_frame"/>

    </LinearLayout>

</LinearLayout>